--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ nav_sort: case_sensitive
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; 2021 CasualCompany. Distributed by an <a href=\"https://github.com/pmarsceill/just-the-docs/tree/master/LICENSE.txt\">MIT license.</a>"
+footer_content: "Copyright &copy; 2021 Christoph Koenning. Distributed by an <a href=\"https://github.com/ProdIsMyDev/Arc42-Just-The-Docs/blob/main/LICENSE\">MIT license.</a>"
 
 
 gh_edit_link: true
