--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >-
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" 
-url: "https://arc42.prodismy.dev/" 
+url: "https://arc42.prodismy.dev" 
 twitter_username: ProdIsMyDev
 github_username: ProdIsMyDev
 
